force-app/main/default/objects/Item_Snapshot_Task__c/Item_Snapshot_Task__c.object-meta.xml
<CustomObject>
    <label>Item Snapshot Task</label>
    <nameField>
        <label>Item Snapshot Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Snapshot Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>