force-app/main/default/objects/Item_Snapshot_Task__c/fields/assignedTo__c.field-meta.xml
<CustomField>
    <fullName>assignedTo__c</fullName>
    <label>assignedTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>