force-app/main/default/objects/Item_Snapshot_Task__c/fields/assignedToType__c.field-meta.xml
<CustomField>
    <fullName>assignedToType__c</fullName>
    <label>assignedToType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>