force-app/main/default/objects/Item_Snapshot_Task__c/fields/dueDateOffset__c.field-meta.xml
<CustomField>
    <fullName>dueDateOffset__c</fullName>
    <label>dueDateOffset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>