force-app/main/default/objects/Item_Snapshot_Task__c/fields/notifyAssignee__c.field-meta.xml
<CustomField>
    <fullName>notifyAssignee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>notifyAssignee</label>
    <type>Checkbox</type>
</CustomField>