force-app/main/default/objects/Item_Snapshot_Task__c/fields/offsetFromField__c.field-meta.xml
<CustomField>
    <fullName>offsetFromField__c</fullName>
    <label>offsetFromField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>