force-app/main/default/objects/Item_Snapshot_Task__c/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <label>priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>