force-app/main/default/objects/Item_Snapshot_Task__c/fields/protected_x__c.field-meta.xml
<CustomField>
    <fullName>protected_x__c</fullName>
    <defaultValue>false</defaultValue>
    <label>protected_x</label>
    <type>Checkbox</type>
</CustomField>