force-app/main/default/objects/Item_Snapshot_Task__c/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <label>subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>